added page navigation
added links to navigate from the homepage to the recipe pages and back

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <main>
             <h1>Odin Recipes</h1>
+            <a href="./recipes/lasagna.html">Lasagna</a>
+            <a href="./recipes/carbonara.html">Carbonara</a>
+            <a href="./recipes/green-curry.html">Green curry</a>
+            <a href="./recipes/jambalaya.html">Jambalaya</a>
         </main>
     </body>
 </html>
