--- a/recipes/green-curry.html
+++ b/recipes/green-curry.html
@@ -7,6 +7,7 @@
     <body>
         <main>
             <h1>Green curry</h1>
+            <a href="../index.html">Home</a>
         </main>
     </body>
 </html>
