--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
     <body>
         <main>
             <h1>Lasaga</h1>
+            <a href="../index.html">Home</a>
         </main>
     </body>
 </html>
