--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <body>
         <main>
             <h1>Odin Recipes</h1>
-            <a href="./recipes/lasagna.html">Lasagna</a>
-            <a href="./recipes/carbonara.html">Carbonara</a>
-            <a href="./recipes/green-curry.html">Green curry</a>
-            <a href="./recipes/jambalaya.html">Jambalaya</a>
+            <ul>
+                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+                <li><a href="./recipes/green-curry.html">Green curry</a></li>
+                <li><a href="./recipes/jambalaya.html">Jambalaya</a></li>
+            </ul>
         </main>
     </body>
 </html>
