--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <main>
             <h1>Odin Recipes</h1>
             <ul>
-                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/lasagna.html">Lasagne Verdi alla Bolognese</a></li>
                 <li><a href="./recipes/carbonara.html">Carbonara</a></li>
                 <li><a href="./recipes/green-curry.html">Green curry</a></li>
                 <li><a href="./recipes/jambalaya.html">Jambalaya</a></li>
