--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -2,11 +2,58 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <title>Carbonara</title>
+      <title>Spaghetti alla Carbonara</title>
     </head>
     <body>
         <main>
-            <h1>Carbonara</h1>
+            <h1>Spaghetti alla Carbonara</h1>
+            <img src="../img/carbonara.jpg" alt="Image of the finished spaghetti alla carbonara" height="350" width="350">
+            <h3>Description</h3>
+            <p>
+                Carbonara is a Roman dish made with eggs, hard cheese, and cured pork. Its signature rich and silky
+                sauce comes from beaten eggs tossed with hot pasta. The trick to making carbonara is making sure the
+                pasta is hot enough to cook the eggs, but not so hot that they curdle.
+            </p>
+            <h3>Ingredients</h3>
+            <p>yields 4 servings</p>
+            <ul>
+                <li>2 teaspoons olive oil</li>
+                <li>1 pound guanciale (cured pork cheek), diced</li>
+                <li>1 (16 ounce) package spaghetti</li>
+                <li>3 large eggs</li>
+                <li>10 tablespoons grated Pecorino Romano cheese, divided</li>
+                <li>salt and freshly ground black pepper to taste</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol>
+                <li>
+                    Heat olive oil in a large skillet over medium heat; add guanciale (see Cook's Note). Cook, turning
+                    occasionally, until evenly browned and crispy, 5 to 10 minutes. Remove from heat and drain on paper
+                    towels. 
+                </li>
+                <li>
+                    Bring a large pot of salted water to a boil. Cook spaghetti in the boiling water, stirring
+                    occasionally until tender yet firm to the bite, about 9 minutes. Drain and return to the pot. Let
+                    cool, stirring occasionally, about 5 minutes.
+                </li>
+                <li>
+                    Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and
+                    creamy. 
+                </li>
+                <li>
+                    Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale. 
+                </li>
+                <li>
+                    Top with remaining Pecorino Romano cheese and more black pepper.
+                </li>
+            </ol>
+            <h3>Note's</h3>
+            <p>
+                You can substitute unsmoked bacon or pancetta for guanciale, bucatini for spaghetti, and Parmesan
+                cheese for Pecorino Romano if desired. Guanciale, dry-cured pork jowl, is available from specialty
+                markets. Use Italian pasta for best results. Ask somebody to hold the pot so you can stir pasta
+                quickly when pouring in egg mixture.
+            </p>
             <a href="../index.html">Home</a>
         </main>
     </body>
