--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -7,6 +7,62 @@
     <body>
         <main>
             <h1>Jambalaya</h1>
+            <img src="../img/jambalaya.jpg" alt="Image of the finished jambalaya" height="350" width="350">
+            <h3>Description</h3>
+            <p>
+                Jambalaya is a one-pot dish that's made with rice, meat or seafood, and vegetables. With French and
+                Spanish influences, jambalaya is quite similar to paella. The name "jambalaya" likely comes from the
+                Provençal word "jambalaia," which means mishmash.
+            </p>
+            <h3>Ingredients</h3>
+            <p>yields 6 servings</p>
+            <ul>
+                <li>2 tablespoons peanut oil, divided</li>
+                <li>1 tablespoon Cajun seasoning</li>
+                <li>10 ounces andouille sausage, sliced into rounds</li>
+                <li>1 pound boneless skinless chicken breasts, cut into 1 inch pieces</li>
+                <li>1 onion, diced</li>
+                <li>1 small green bell pepper, diced</li>
+                <li>2 ribs celery, diced</li>
+                <li>3 cloves garlic, mince</li>
+                <li>1 (16 ounce) can crushed Italian tomatoes</li>
+                <li>½ teaspoon red pepper flakes</li>
+                <li>½ teaspoon ground black pepper</li>
+                <li>1 teaspoon salt</li>
+                <li>½ teaspoon hot pepper sauc</li>
+                <li>2 teaspoons Worcestershire sauce</li>
+                <li>1 teaspoon file powder</li>
+                <li>1 ¼ cups uncooked white rice</li>
+                <li>2 ½ cups chicken broth</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol>
+                <li>
+                    Heat 1 tablespoon of peanut oil in a large heavy Dutch oven over medium heat. Season sausage and
+                    chicken pieces with Cajun seasoning. Sauté sausage until browned. Remove with slotted spoon, and
+                    set aside.
+                </li>
+                <li>
+                    Add 1 tablespoon peanut oil, and sauté chicken pieces until lightly browned on all sides. Remove
+                    with a slotted spoon, and set aside
+                </li>
+                <li>
+                    In the same pot, sauté onion, bell pepper, celery, and garlic until tender.
+                </li>
+                <li>
+                    Stir in crushed tomatoes, and season with red pepper, black pepper, salt, hot pepper sauce,
+                    Worcestershire sauce, and filé powder.
+                </li>
+                <li>
+                    Stir in chicken and sausage. Cook for 10 minutes, stirring occasionally.
+                </li>
+                <li>
+                    Stir in the rice and chicken broth.
+                </li>
+                <li>
+                    Bring to a boil, reduce heat, and simmer for 20 to 25 minutes, or until liquid is absorbed.
+                </li>
+            </ol>
             <a href="../index.html">Home</a>
         </main>
     </body>
